setup courses components

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,8 @@
 @import './styles/variables.scss';
 @import './styles/menu.scss';
 @import './styles/home-component.scss';
-@import './styles/videoItem';
+@import './styles/videoItem.scss';
+@import './styles/course-item.scss';
 
 .App {
   //text-align: center;
