--- a/src/styles/videoItem.scss
+++ b/src/styles/videoItem.scss
@@ -1,22 +1,17 @@
 .video-item {
-  border-radius: 8px;
   overflow: hidden;
   border: 1px solid #f3f3f3;
   background-color: #fff;
-  box-shadow: 0 2px 4px 0 rgba(184, 184, 184, 0.5);
   position: relative;
   cursor: pointer;
   transition: all 300ms;
   margin: 2em 0;
+  box-shadow: 10px 10px 1px #002333; 
 
   a {
     text-decoration: none;
   }
 
-  &:hover {
-    box-shadow: 3px 5px 3px 0 rgba(184, 184, 184, 0.5);
-    transform: scale(1.02);
-  }
 
   h2 {
     font-size: 1rem;
