--- a/src/styles/videoItem.scss
+++ b/src/styles/videoItem.scss
@@ -1,4 +1,5 @@
 .video-item {
+  /**
   overflow: hidden;
   border: 1px solid #f3f3f3;
   background-color: #fff;
@@ -7,11 +8,11 @@
   transition: all 300ms;
   margin: 2em 0;
   box-shadow: 10px 10px 1px #002333; 
+  */
 
   a {
     text-decoration: none;
   }
-
 
   h2 {
     font-size: 1rem;
