--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 :root {
     --darkblue: #002333;
     --green: #00ff84;
+    --error: #da2b0c;
 }
 $mainfont: 'Inter', sans-serif;
 $darkblue: #002333;
