--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,7 @@
     --darkblue: #002333;
     --green: #00ff84;
     --error: #da2b0c;
+    --errorrgba: 218,43,12
 }
 $mainfont: 'Inter', sans-serif;
 $darkblue: #002333;
